// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommonViewerScriptEntry template generates correct template w/o controllers 1`] = `
"
  import {createControllersWithDescriptors, initAppForPageWrapper} from 'yoshi-flow-editor-runtime/build/viewerScript.js';
  
  

  import * as viewerApp from 'project/src/app.ts';
  const importedApp = viewerApp;

  export const initAppForPage = initAppForPageWrapper(importedApp.initAppForPage);
  export const createControllers = createControllersWithDescriptors([], importedApp.mapPlatformStateToAppData);
"
`;

exports[`CommonViewerScriptEntry template generates correct template with multiple controllers 1`] = `
"
  import {createControllersWithDescriptors, initAppForPageWrapper} from 'yoshi-flow-editor-runtime/build/viewerScript.js';
  
  import controller0 from 'project/src/components/todo/controller.ts';
import controller1 from 'project/src/components/todo/controller.ts';

  import * as viewerApp from 'project/src/app.ts';
  const importedApp = viewerApp;

  export const initAppForPage = initAppForPageWrapper(importedApp.initAppForPage);
  export const createControllers = createControllersWithDescriptors([{ method: controller0, id: \\"123\\" }, { method: controller1, id: \\"567\\" }], importedApp.mapPlatformStateToAppData);
"
`;

exports[`CommonViewerScriptEntry template generates correct template with single controller 1`] = `
"
  import {createControllersWithDescriptors, initAppForPageWrapper} from 'yoshi-flow-editor-runtime/build/viewerScript.js';
  
  import controller0 from 'project/src/components/button/controller.ts';

  import * as viewerApp from 'project/src/app.ts';
  const importedApp = viewerApp;

  export const initAppForPage = initAppForPageWrapper(importedApp.initAppForPage);
  export const createControllers = createControllersWithDescriptors([{ method: controller0, id: \\"123\\" }], importedApp.mapPlatformStateToAppData);
"
`;
